<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ryan.hardwaremonitor.MySettings"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coreString"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textSize="20sp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/maxCore"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/core" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memString"
            android:id="@+id/textView4"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/maxMem"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/mem" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ramString"
            android:id="@+id/textView2"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/maxRam"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/ram" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempString"
            android:id="@+id/textView3"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/maxTemp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/temp" />
    </RelativeLayout>



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_columnWeight="1"
            android:layout_gravity="bottom"
            android:onClick="cancelSettings"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveSettings"
            android:layout_columnWeight="1"
            android:layout_gravity="bottom" />
    </GridLayout>

</LinearLayout>
